add: Rutas rol
